--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ environment:
 
 dependencies:
   bordered_text: ^2.0.0
-  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.2.1
+  intl: ^0.19.0
   palette_generator: ^0.3.3+3
 
 dev_dependencies:
